--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,13 @@
 <body>
     <div class="app">
         <header class="header">
-            <h1>Quầy mượn sách - Thư viện Tạ Quang Bửu</h1>
-            <p>Mô phỏng sinh viên đến xếp hàng chờ mượn / trả sách.</p>
+            <img class="bk-logo" src="/images/hust_logo.png" alt="Logo Bách Khoa" onerror="this.style.display='none'" />
+            <div class="header-inner">
+                <div class="header-text">
+                    <h1>Quầy mượn sách - Thư viện Tạ Quang Bửu</h1>
+                    <p>Mô phỏng sinh viên đến xếp hàng chờ mượn / trả sách.</p>
+                </div>
+            </div>
         </header>
 
         <main class="main">
@@ -313,7 +318,7 @@
         </main>
 
         <footer class="footer">
-            <p>Môn: Lập trình mô phỏng - Mô phỏng quầy mượn sách Thư viện Tạ Quang Bửu.</p>
+            <p>Copyright by Huyen's group - Huyen leader</p>
         </footer>
     </div>
 
